css/styles.css
/* fonts */
@font-face {
  font-family: 'Manrope';
  src: url('../fonts/Manrope-ExtraBold.woff2') format('woff2'),
      url('../fonts/Manrope-ExtraBold.woff') format('woff');
  font-weight: 800;
  font-style: normal;
  font-display: swap;
}

@font-face {
  font-family: 'Manrope';
  src: url('../fonts/Manrope-Bold.woff2') format('woff2'),
      url('../fonts/Manrope-Bold.woff') format('woff');
  font-weight: bold;
  font-style: normal;
  font-display: swap;
}

@font-face {
  font-family: 'Manrope';
  src: url('../fonts/Manrope-ExtraLight.woff2') format('woff2'),
      url('../fonts/Manrope-ExtraLight.woff') format('woff');
  font-weight: 200;
  font-style: normal;
  font-display: swap;
}

@font-face {
  font-family: 'Manrope';
  src: url('../fonts/Manrope-Medium.woff2') format('woff2'),
      url('../fonts/Manrope-Medium.woff') format('woff');
  font-weight: 500;
  font-style: normal;
  font-display: swap;
}

@font-face {
  font-family: 'Manrope';
  src: url('../fonts/Manrope-Light.woff2') format('woff2'),
      url('../fonts/Manrope-Light.woff') format('woff');
  font-weight: 300;
  font-style: normal;
  font-display: swap;
}

@font-face {
  font-family: 'Manrope';
  src: url('../fonts/Manrope-Regular.woff2') format('woff2'),
      url('../fonts/Manrope-Regular.woff') format('woff');
  font-weight: normal;
  font-style: normal;
  font-display: swap;
}

@font-face {
  font-family: 'Manrope';
  src: url('../fonts/Manrope-SemiBold.woff2') format('woff2'),
      url('../fonts/Manrope-SemiBold.woff') format('woff');
  font-weight: 600;
  font-style: normal;
  font-display: swap;
}
@font-face {
  font-family: 'Nanum Pen';
  src: url('../fonts/NanumPen.woff2') format('woff2'),
      url('../fonts/NanumPen.woff') format('woff');
  font-weight: normal;
  font-style: normal;
  font-display: swap;
}

/* Colors Variables */
:root {
  --text-primary: #18191F;
  --white-primary: #FFFFFF;
  --brand-turquoise-back: #D5FAFC;
  --brand-turquoise: #2EC5CE;
  --black-primary: #0B0D17;
  --brand-purpple: #8C30F5;
  --text-secundary: #F4F5F7;
  --text-gray: #969BAB;
}

/* General Styles */
* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}
body {
  width: 100%;
  background-color: var(--white-primary);
  font-family: 'Manrope';
  font-weight: 800;
  font-style: normal;
  color: var(--text-primary);
}
a {
  text-decoration: none;
  color: var(--text-primary);
  cursor: pointer;
}
ul {
  list-style: none;
}
button {
  border-style: none;
}
button:focus {
  outline: none;
}

/* -------HEADER-------- */
.header {
  display: flex;
  flex-wrap: wrap;
  padding: 30px 50px;
  width: 100%;
  justify-content: space-between;
}
.header--scrolled {
  background-color: var(--brand-turquoise-back);
  position: fixed;
}
.logo {
  display: flex;
  justify-content: flex-start;
}
.navbar {
  display: none;
}
.navbar--mobile {
  width: 100%;
  display: flex;
  justify-content: center;
  align-items: center;
  padding: 50px;
}
.navbar__list {
  height: 100vh;
  display: flex;
  flex-direction: column;
  align-items: center;
}
.navbar__item {
  margin: 30px 0;
 
}
.navbar__contact {
  display: flex;
  justify-content: center;
  align-items: center;
  width: 100px;
  height: 40px;
  margin: 20px 0;
  border: var(--brand-purpple) 1px solid;
  border-radius: 10px;
  background-color: var(--brand-purpple);
}
.navbar__contact:hover {
  background-color: var(--white-primary);
}
.navbar__contact-link {
  height: 100%;
  color: var(--white-primary);
  padding-top: 8px;
}
.navbar__contact-link:hover {
  color: var(--brand-purpple);  
}
.hamburger-btn, .x-btn {
  display: flex;
  justify-content: flex-end;
  align-items: center;
  background-color: var(--white-primary);
}
.x-btn {
  display: flex;
  justify-content: flex-end;
  align-items: center;
  background-color: var(--white-primary);
}
.hamburger-btn--clicked, .x-btn--clicked {
  display: none;
}
.hamburger-btn--scrolled, .x-btn--scrolled {
  background-color: var(--brand-turquoise-back);
}
/* FOOTER */
.footer {
  display: grid;
  grid-template-columns: 1fr 1fr;
  grid-gap: 40px;
  background-color: var(--black-primary);
  color: var(--text-secundary);
  padding: 30px 0 20px 0;
}
.install {
  display: grid;
  grid-column: 1 /span 2;
  grid-template-columns: 1fr 1fr;
}
.install__title {
  grid-column: 1 /span 2;
  font-weight: 500;
  font-size: 1.125rem;
  line-height: 28px;
  margin-bottom: 20px;
  text-align: center;
  
}
.install__item {
  display: grid;
  justify-content: center;
  align-items: center;
}
.support__title {
  font-weight: 500;
  font-size: 1.125rem;
  line-height: 28px;
  margin-bottom: 7px;
  text-align: start;
}
.legal__title {
  font-weight: 500;
  font-size: 1.125rem;
  line-height: 28px;
  margin-bottom: 20px;
  text-align: start;
}
.company {
  display: none;
  grid-gap: 4px;
}
.support {
  display: grid;
  grid-gap: 4px;
  padding-left: 27px;
}
.legal {
  display: grid;
  grid-gap: 4px;
  padding-left: 12px;
}

.support__item, .legal__item, .company__item {
  text-align: start;
  margin-bottom: 12px;
}
.support__item-link, .legal__item-link, .company__item-link {
  font-weight: normal;
  font-size: 0.87rem;
  line-height: 24px;
  color: var(--text-gray);  
}
.mini-foot {
  display: grid;
  grid-column: 1 / span 2;
  grid-template-columns: 1fr;
  justify-content: center;
  padding-top: 5px;
}
.mini-foot::before {
  content: '';
  left: 0;
  top: 0;
  height: 1px;
  border-bottom: 1px solid var(--text-gray);
}
.social {
  display: grid;
  grid-column: 1 /span 2;
  grid-template-columns: 1fr 1fr 1fr 1fr;
  margin-bottom: 5px;
  margin-top: 8px;
}
.social__item {
  display: grid;
  justify-content: center;
}
.copyright {
  grid-column: 1 /span 2;
  font-size: 0.7rem;
  color: var(--text-gray);
  text-align: center;
}
/* -------------------------------------------- */
/* TABLET */
@media screen and (min-width: 768px) {
  .header{
    height: 88px;
    padding: 30px 60px;
  }
  .logo {
    width: 50%;
  }
  .navbar {
    display: flex;
    width: 50%;
  }
  .navbar__list {
    width: 100%;
    height: 30px;
    flex-direction: row;
    justify-content: flex-end;
  }
  .hamburger-btn, .x-btn {
    display: none;
  }
  .navbar__item {
    margin: 0 20px;
  }
  .navbar__contact {
    margin: 20px 10px;
    border: none;
    background-color: var(--white-primary);
    border-radius: 10px;
  }
  .navbar__contact:hover {
    background-color: var(--brand-purpple);
    color: var(--white-primary); 
  }
  .navbar__contact-link {
    color: var(--text-primary);
    margin: 0 10px;
    padding-top: 9px;
  }
  .navbar__contact-link:hover {
    color: var(--white-primary);  
  }
  /* FOOTER */
  .footer {
    grid-template-columns: 1fr 1fr 1fr;
  }
  .install {
    grid-column: 1 / span 3;
    grid-template-columns: 1fr 1fr;
    grid-gap: 10px;
    margin-bottom: 30px;
  }
  .install__title {
    grid-column: 1 / span 2;
  }
  .company {
    display: grid;
    justify-self: center;
    padding-left: 80px;
  }
  .support {
    padding-left: 0;
    justify-self: center;
    padding-left: 60px;
  }
  .legal {
    justify-self: center;
    padding-right: 40px;
  }
  .company__title {
    font-weight: 500;
    font-size: 1.125rem;
    line-height: 28px;
    text-align: start;
    margin-bottom: 10px;
  }
  .support__title {
    text-align: start;
    margin-bottom: 10px;
  }
  .legal__title {
    text-align: start;
    margin-bottom: 10px;
  }
  .company__item, .support__item, .legal__item {
    text-align: start;
  }
  .support__item-link, .legal__item-link, .company__item-link {
    font-size: 1.14rem;
    line-height: 24px;
  }
  .mini-foot {
    grid-column: 1 / span 3;
    grid-template-columns: 1fr 1fr;
  }
  .social {
    grid-column: 2 / span 1;
    grid-row: 1 / span 1;
  }
  .copyright {
    grid-column: 1 / span 1;
    grid-row: 1 / span 1;
    padding-top: 15px;
  }
  .mini-foot::before {
    grid-column: 1 / span 2;
    grid-row: 1 / span 1;
  }
} 
/* --------------------------------- */
/* DESKTOP */
@media screen and (min-width: 1024px) {
  .header {
    padding: 30px 120px;
  }
  .navbar__item {
    margin: 0 10px;
  }
  /* FOOTER */
  .footer {
    height: 393px;
    grid-template-columns: 1fr 1fr 1fr 1fr;
    padding-top: 50px;
    padding-bottom: 0;
    
  }
  .company {
    grid-column: 1 / span 1;
    grid-row: 1 / span 1;
    padding-left: 0;
    grid-gap: 0;
    justify-self: end;
  }
  .support {
    grid-column: 2 / span 1;
    grid-row: 1 / span 1;
    padding-left: 0;
    grid-gap: 0;
  }
  .legal {
    grid-column: 3 / span 1;
    grid-row: 1 / span 1;
    padding-right: 0;
    grid-gap: 0;
    justify-self: left;
  }
  .install {
    grid-column: 4 / span 1;
    grid-template-columns: 1fr;
  }
  .install__title {
    padding-bottom: 0;
    text-align: left;
    grid-column: 1 / span 1;
  }
  .install__item {
    justify-content: left;
  }
  .company__title, .legal__title {
    margin-bottom: 5px;
  }
  .support__title {
    margin-bottom: -30px;
  }
  .mini-foot {
    height: 45px;
    grid-column: 1 / span 4;
    margin-top: 20px;
  }
  .social {
    margin-top: 20px;
    padding: 0 200px;
  }
  .copyright {
    padding-top: 27px;
  }
}

.sections {
  height: 800px;
}

